<resources>
    <string name="app_name">Sadegh Shop</string>
    <string name="account_nav_title">حساب کاربری</string>
    <string name="home_nav_title">صفحه اصلی</string>
    <string name="categories_nav_title">دسته بندی ها</string>
    <string name="cart_nav_title">سبد خرید</string>
    <string name="settings_nav">تنظیمات</string>
    <string name="about_nav">درباره ی ما</string>
    <string name="exit_nav">خروج</string>
    <string name="home_text_random_filler">صفحه اصلی</string>
    <string name="open_actionbar">open</string>
    <string name="close_actionbar">close</string>
    <string name="action_toggle_bar">action_toggle_bar</string>
    <string name="search_title">search</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="my_button">my Button</string>
    <string name="home_fragment">home fragment</string>
    <string name="categories_fragment">categories fragment</string>
    <string name="profile_fragment">profile fragment</string>
    <string name="cart_fragment">cart fragment</string>
    <string name="about_text">این اپلیکیشن به عنوان یک پروژه ی آزمایشی توسط صادق خدری پیاده سازی شده است.</string>
    <string name="cart_text">برای استفاده از سبد خرید ابتدا ثبت نام کنید.</string>
    <string name="profile_full_name">هومر سیمسون</string>
    <string name="profile_id"> /&#64;HomerSimpsons </string>
    <string name="profile_email">homer_simpson@gmail.com</string>
    <string name="profile_phone">09175552424</string>
    <string name="profile_address">بوشهر خیابان سنگی کوچه ی گلخونه ساختمان دوم سمت راست واحد 1</string>
    <string name="profile_balance">125000000</string>
    <string name="edit_profile_btn">ویرایش حساب کاربری</string>
    <string name="login_title">ورود</string>
    <string name="email_hint">ایمیل</string>
    <string name="login_btn">ورود</string>
    <string name="password_hint">رمزعبور</string>
    <string name="password_recovery_btn">بازیابی رمز عبور</string>
    <string name="login_signup_btn">ثبت نام</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="signup_btn">ثبت نام</string>
    <string name="signup_title">ثبت نام</string>
    <string name="signup_to_login_btn">وارد شوید</string>
    <string name="signup_to_login_des">اکانت دارید؟؟</string>
    <string name="confirm_password_hint">تکرار رمز عبور</string>
    <string name="signup_name_hint">نام و نام خانوادگی</string>
    <string name="signup_phone_hint">شماره موبایل</string>
    <string name="signup_address_hint">آدرس</string>
    <string name="signup_postal_code_hint">کد پستی</string>
    <string name="login_to_signup_des">اکانت ندارید؟؟</string>
    <string name="first_row_title">دسته اول</string>
    <string name="home_first_see_more">نمایش همه</string>
    <string name="home_item_short_description">لبتاب خوب ایسوس</string>
    <string name="second_row_title">دسته دوم</string>
    <string name="third_row_title">دسته سوم</string>
    <string name="item_specs_title">ویژگی های محصول</string>
    <string name="item_brand">ایسوس</string>
    <string name="item_title">لبتاب خوب ایسوس</string>
    <string name="item_review_row_title">نقد و بررسی</string>
    <string name="item_review">لپ تاپ Asus ROG Strix G15 G513QE شگفتی دیگری از کمپانی قدرتمند ایسوس است که برای گیمرها طراحی شده است. عملکرد بی‌نظیر این دستگاه به‌واسطه به‌کارگیری پردازنده مرکزی توانمند AMD Ryzen 7 5800H و پردازنده گرافیکی بسیار قدرتمند NVIDIA Geforce RTX 3050Ti است که تجربه گیم بی‌نظیری را برای گیمرها به‌ارمغان می‌آورد. مجهز شدن G513QE به حافظه یک ترابایتی از نوع SSD سرعت فوق‌العاده و فضای گسترده‌ای را در پی دارد که به اجرای روان بازی کمک می‌کند. صفحه‌نمایش مات با رزولوشن FHD 1920 x 1080 هیجان یک گیم زنده را با تصاویر واقعی مهیا می‌سازد، همچنین به‌واسطه مات بودن نمایشگر تمرکز شما روی تصاویر با کیفیت بیشتر خواهد شد. طراحی با استحکام و وزن سبک 2.3 کیلوگرمی این لپ‌تاپ منجر می‌شود بتوانید آن را به‌راحتی با خود حمل کنید. گفتنی است ایسوس این محصول خود را به Wi-Fi 6 802.11ax مجهز کرده است تا قابلیت اجرای بی‌عیب‌و‌نقص بازی‌های آنلاین را ایجاد کند، همچنین پورت‌های کاربردی و بلوتوث به‌روز، این دستگاه را پشتیبانی می‌کنند.</string>
    <string name="item_user_review_text">متن نظر کاربر متن نظر کاربر متن نظر کاربر متن نظر کاربر متن نظر کاربر متن نظر کاربر متن نظر کاربر متن نظر کاربر متن نظر کاربر متن نظر کاربر متن نظر کاربر متن نظر کاربر متن نظر کاربر متن نظر کاربر </string>
    <string name="item_user_review_title">عنوان نظر کاربر</string>
    <string name="item_user_review_row_title">نظر کاربران</string>
    <string name="item_add_review_button">نظر خود را ثبت کنید</string>
    <string name="item_suggestions_title">کالاهای پیشنهادی</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart">افزودن به سبد خرید</string>
    <string name="item_price_currency">تومان</string>
    <string name="item_price">900000</string>
    <string name="cart_item_image">item image here</string>
    <string name="cart_item_count">1</string>
    <string name="remove_one">remove one</string>
    <string name="add_one">add one</string>
    <string name="wallpaper">wallpaper</string>
    <string name="arrow_icon">arrow_icon</string>
    <string name="icon">icon</string>
    <string name="search_hint">جستجو در همه ی کالاها</string>
    <string name="address_icon">address icon</string>
    <string name="email_icon">email icon</string>
    <string name="phone_icon">phone icon</string>
</resources>